force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Post_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Post_Installation_Status__c</fullName>
    <formula>TEXT(Installation__r.FS_Execution_Plan__r.FS_Updated_Post_Installation_Status__c)</formula>
    <label>Post Installation Status</label>
    <type>Text</type>
</CustomField>