force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Postal_Code__c</fullName>
    <formula>FS_Outlet__r.ShippingPostalCode</formula>
    <inlineHelpText>PSTLZ</inlineHelpText>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>