force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Promo_Enabled_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Promo_Enabled_Effective_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>Promo Enabled Effective Date</label>
    <type>Date</type>
</CustomField>