force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Promo_Enabled_New__c.field-meta.xml
<CustomField>
    <fullName>FS_Promo_Enabled_New__c</fullName>
    <label>Promotion Enabled.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>