force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_REGIO__c.field-meta.xml
<CustomField>
    <fullName>FS_REGIO__c</fullName>
    <formula>FS_Outlet__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>REGIO</inlineHelpText>
    <label>Region (State, Province, County)</label>
    <type>Text</type>
</CustomField>