force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Removal_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>FS_Removal_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removal Request Submitted</label>
    <type>Checkbox</type>
</CustomField>