force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Sale_or_Leased__c.field-meta.xml
<CustomField>
    <fullName>FS_Sale_or_Leased__c</fullName>
    <label>Sale or Leased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOE</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
                <default>true</default>
                <label>Leased</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>