force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_SAP_ID__c</fullName>
    <formula>FS_Outlet__r.FS_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Customer Number</label>
    <type>Text</type>
</CustomField>