force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Selected_Brands__c.field-meta.xml
<CustomField>
    <fullName>FS_Selected_Brands__c</fullName>
    <label>Brands Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>