force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Serial_Number2__c.field-meta.xml
<CustomField>
    <fullName>FS_Serial_Number2__c</fullName>
    <description>Serial Number/Asset Tag.</description>
    <label>JDE Serial Number/Asset Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>