force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Serial_Number__c</fullName>
    <formula>FS_Serial_Number2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>