force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Tier__c</fullName>
    <description>level of service provided by KO for DOE</description>
    <inlineHelpText>If DOE, will KO provide and charge for maintenance</inlineHelpText>
    <label>Service Tier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>