force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_showHideWater_Effective_date__c.field-meta.xml
<CustomField>
    <fullName>FS_showHideWater_Effective_date__c</fullName>
    <label>showHideWater Effective date</label>
    <type>Date</type>
</CustomField>