force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Soft_Ice_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>FS_Soft_Ice_Manufacturer__c</fullName>
    <label>Soft Ice Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>