force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Spicy_Cherry__c.field-meta.xml
<CustomField>
    <fullName>FS_Spicy_Cherry__c</fullName>
    <description>rename the existing fields like spicy cherry, still and agitaged fields to &quot;Spicy cherry airwatch attribute&quot; and so on
move these fields to the system info section or in a different section that can be collapsed</description>
    <label>Spicy Cherry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pibb/Pibb Zero</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Vitaminwater</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Powerade</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Dasani</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Vitaminwater</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Powerade</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Dasani</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>