force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Spicy_Cherry_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Spicy_Cherry_Effective_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>Spicy Cherry Effective Date</label>
    <type>Date</type>
</CustomField>