force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Status__c</fullName>
    <description>Status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Enroll</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Hibernate</fullName>
            </value>
            <value>
                <fullName>Wakeup</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Booking Complete</fullName>
            </value>
            <value>
                <fullName>Dispenser Pickup</fullName>
            </value>
            <value>
                <fullName>Dispenser Delivered</fullName>
            </value>
            <value>
                <fullName>In Inventory</fullName>
            </value>
            <value>
                <fullName>Assigned to Outlet</fullName>
            </value>
            <value>
                <fullName>Winterized</fullName>
            </value>
            <value>
                <fullName>Rough Stock</fullName>
            </value>
            <value>
                <fullName>Remaned</fullName>
            </value>
            <value>
                <fullName>To be scrapped by Bottler</fullName>
            </value>
            <value>
                <fullName>To be scrapped by CM</fullName>
            </value>
            <value>
                <fullName>Confirmed Scrapped</fullName>
            </value>
            <value>
                <fullName>Sold to Bottler</fullName>
            </value>
            <value>
                <fullName>Purchased from Bottler</fullName>
            </value>
            <value>
                <fullName>To be Remanufactured</fullName>
            </value>
            <value>
                <fullName>Unenrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>