force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_STRAS__c.field-meta.xml
<CustomField>
    <fullName>FS_STRAS__c</fullName>
    <formula>FS_Outlet__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Number and Street</label>
    <type>Text</type>
</CustomField>