force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>FS_TimeZone__c</fullName>
    <description>Time Zone..</description>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>