force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Un_Enrolled_State_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Un_Enrolled_State_Date__c</fullName>
    <label>Un Enrolled State Date</label>
    <type>Date</type>
</CustomField>