force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Update_to_AW_Request__c.field-meta.xml
<CustomField>
    <fullName>FS_Update_to_AW_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update to AW Request</label>
    <type>Checkbox</type>
</CustomField>