force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_User_Defined_Location__c.field-meta.xml
<CustomField>
    <fullName>FS_User_Defined_Location__c</fullName>
    <label>User Define Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>