force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Uses_Portion_Control__c.field-meta.xml
<CustomField>
    <fullName>FS_Uses_Portion_Control__c</fullName>
    <label>Uses Portion Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>