force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Wake_Up_State_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Wake_Up_State_Date__c</fullName>
    <label>Wake Up State Date</label>
    <type>Date</type>
</CustomField>