force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Water_Button__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Button__c</fullName>
    <description>.</description>
    <label>Water Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>