force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Winterize_State_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Winterize_State_Date__c</fullName>
    <label>Winterize State Date</label>
    <type>Date</type>
</CustomField>