force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FSCombinedId__c.field-meta.xml
<CustomField>
    <fullName>FSCombinedId__c</fullName>
    <formula>if(FS_Serial_Number__c != &#39;&#39;, FS_ACN_NBR__c &amp; &quot;|&quot; &amp; FS_Serial_Number__c,FS_ACN_NBR__c &amp; &quot;|&quot; &amp; FS_Serial_Number2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSCombinedId</label>
    <type>Text</type>
</CustomField>