force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FSInt_Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>FSInt_Dispenser_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispenser Model</label>
    <referenceTo>Dispenser_Model__c</referenceTo>
    <relationshipLabel>Outlet Dispensers</relationshipLabel>
    <relationshipName>Outlet_Dispensers</relationshipName>
    <type>Lookup</type>
</CustomField>