force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Head_Quarter_ID__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_ID__c</fullName>
    <formula>FS_Outlet__r.FS_HQ_ACN__c</formula>
    <label>Head Quarter ID</label>
    <type>Text</type>
</CustomField>