force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Head_Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_Name__c</fullName>
    <formula>FS_Outlet__r.FS_Headquarters__r.Name</formula>
    <label>Head Quarter Name</label>
    <type>Text</type>
</CustomField>