force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Hide_DP_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Hide_DP_Dispenser__c</fullName>
    <description>Value from Dispenser updated by FIRM.</description>
    <label>showHideDrPepper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>