force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Hide_Water_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Hide_Water_Dispenser__c</fullName>
    <description>Value from Dispenser updated by FIRM.</description>
    <label>Dispenser Water Show/Hide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>