force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/IC_Code__c.field-meta.xml
<CustomField>
    <fullName>IC_Code__c</fullName>
    <formula>FSInt_Dispenser_Type__r.IC_Code__c</formula>
    <inlineHelpText>For International OD&#39;s IC Code value is derived from Dispenser Model.</inlineHelpText>
    <label>IC Code</label>
    <type>Text</type>
</CustomField>