force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Install_Date_Missed__c.field-meta.xml
<CustomField>
    <fullName>Install_Date_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Date Missed</label>
    <type>Checkbox</type>
</CustomField>