force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Installation2__c.field-meta.xml
<CustomField>
    <fullName>Installation2__c</fullName>
    <formula>Installation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation</label>
    <type>Text</type>
</CustomField>