force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2) AND 4) OR 3 OR 5</booleanFilter>
        <errorMessage>The installation referenced by this dispenser is linked to a different outlet than the outlet on the dispenser.</errorMessage>
        <filterItems>
            <field>FS_Installation__c.FS_Outlet__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Outlet__c</valueField>
        </filterItems>
        <filterItems>
            <field>FS_Installation__c.FS_New_Outlet__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Outlet__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>BoE Dispenser</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CCNA Dispenser, 7000, 8000, 9000</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>API User, MDM API User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Installed Dispensers</relationshipLabel>
    <relationshipName>Outlet_Dispensers</relationshipName>
    <type>Lookup</type>
</CustomField>