force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Installation_Market__c.field-meta.xml
<CustomField>
    <fullName>Installation_Market__c</fullName>
    <formula>Installation__r.FS_Market_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Market</label>
    <type>Text</type>
</CustomField>