force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/IOT_Unique_ID_Ext__c.field-meta.xml
<CustomField>
    <fullName>IOT_Unique_ID_Ext__c</fullName>
    <description>External Modem field</description>
    <label>IOT Unique ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>