force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Is_DefaultOutlet__c.field-meta.xml
<CustomField>
    <fullName>Is_DefaultOutlet__c</fullName>
    <formula>FS_Outlet__r.Is_Default_FET_International_Outlet__c</formula>
    <label>Is_DefaultOutlet</label>
    <type>Checkbox</type>
</CustomField>