force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/isDefaultOutlet__c.field-meta.xml
<CustomField>
    <fullName>isDefaultOutlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefaultOutlet</label>
    <type>Checkbox</type>
</CustomField>