force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Item_code__c.field-meta.xml
<CustomField>
    <fullName>Item_code__c</fullName>
    <label>Item code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>