force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Last_Updated_Date_to_DM__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_to_DM__c</fullName>
    <description>Last date and Time FET received a response from the Device Management System...</description>
    <label>Last Updated Date to DM</label>
    <type>DateTime</type>
</CustomField>