force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Last_Updated_DateTime_GMT_to_CMS__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_DateTime_GMT_to_CMS__c</fullName>
    <description>Date/time for most recent update to NMS/CMS</description>
    <inlineHelpText>Date/time for most recent update to NMS/CMS</inlineHelpText>
    <label>Last Updated DateTime(GMT) to CMS</label>
    <type>DateTime</type>
</CustomField>