force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Manual_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Enrollment_Date__c</fullName>
    <inlineHelpText>Date when dispenser which did not exist in FET and AW was manually enrolled from dispenser at Outlet. If blank, dispenser wasn&#39;t manually enrolled.</inlineHelpText>
    <label>Manual Enrollment Date</label>
    <type>Date</type>
</CustomField>