force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Modem_Model_int__c.field-meta.xml
<CustomField>
    <fullName>Modem_Model_int__c</fullName>
    <label>Modem Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>