force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Modem_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Modem_Model_Type__c</fullName>
    <label>Modem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>