force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/OD_Settings_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>OD_Settings_Timestamp__c</fullName>
    <description>Last Date and Time the OD settings changed for this Dispenser. When OD settings change a call to the Device management System is made.</description>
    <label>OD Settings Timestamp</label>
    <type>DateTime</type>
</CustomField>