force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_Address__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Address__c</fullName>
    <formula>FS_Outlet__r.ShippingStreet + &#39;,&#39; + FS_Outlet__r.ShippingCity + &#39;, &#39; + FS_Outlet__r.ShippingState + &#39; &#39; + FS_Outlet__r.ShippingPostalCode + &#39; &#39; + FS_Outlet__r.ShippingCountry</formula>
    <label>Outlet Address</label>
    <type>Text</type>
</CustomField>