force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_City__c.field-meta.xml
<CustomField>
    <fullName>Outlet_City__c</fullName>
    <formula>FS_Outlet__r.ShippingCity</formula>
    <label>Outlet City</label>
    <type>Text</type>
</CustomField>