force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_Country__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Country__c</fullName>
    <formula>FS_Outlet__r.ShippingCountry</formula>
    <label>Outlet Country</label>
    <type>Text</type>
</CustomField>