force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Outlet_State_Province__c</fullName>
    <formula>FS_Outlet__r.ShippingState</formula>
    <label>Outlet State/Province</label>
    <type>Text</type>
</CustomField>