force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Street_Address__c</fullName>
    <formula>FS_Outlet__r.ShippingStreet</formula>
    <label>Outlet Street Address</label>
    <type>Text</type>
</CustomField>