force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Outlet_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Zip_Code__c</fullName>
    <formula>FS_Outlet__r.ShippingPostalCode</formula>
    <label>Outlet Zip Code</label>
    <type>Text</type>
</CustomField>