force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ownership_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bottler-1</fullName>
            </value>
            <value>
                <fullName>Bottler-2</fullName>
            </value>
            <value>
                <fullName>Bottler-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>