force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coca-Cola Business Unit</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>