force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Planned_Remove_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Remove_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>JDE Removal date</label>
    <type>Date</type>
</CustomField>