force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <formula>Shipping_Form__r.FS_PO_Number__c</formula>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>