force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Re_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Re_Manufactured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Manufactured</label>
    <type>Checkbox</type>
</CustomField>